--- a/wp-content/themes/defense360/assets/_scss/components/_pagination.scss
+++ b/wp-content/themes/defense360/assets/_scss/components/_pagination.scss
@@ -7,12 +7,14 @@
 ==================================*/
 
 .pagination-container {
+	margin-bottom: 3rem;
 	font-weight: bold;
 	letter-spacing: 1px;
 	text-align: center;
 	@include fontSize(14px);
 
-	span, a {
+	span,
+	a {
 		margin: 0 0.1rem;
 	}
 
