--- a/wp-content/themes/defense360/assets/_scss/layout/_footer.scss
+++ b/wp-content/themes/defense360/assets/_scss/layout/_footer.scss
@@ -7,6 +7,14 @@
 ==============================*/
 
 footer.site-footer {
+	position: fixed;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	z-index: -1;
+	display:flex;
+	flex-direction: column;
+	justify-content: flex-end;
 	margin-top: 3rem;
 	padding-top: 3rem;
 	color: $color__text-light;
